--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="cuadro2"></div>
     </div>
     <div class="panel2">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="cuadrop2"></div>
+        <div class="cuadrop2"></div>
+        <div class="cuadrop2"></div>
+        <div class="cuadrop2"></div>
     </div>
     <div class="panel3">
-        <div></div>
-        <div></div>
-        <div></div>
+        <div ></div>
+        <div ></div>
+        <div ></div>
     </div>
     <div class="panel4">
         <div></div>
